@@ -1,5 +1,16 @@
 2006-02-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/GParted_Core.h,
+	  include/Partition.h,
+	  src/Dialog_Partition_Info.cc,
+	  src/GParted_Core.cc,
+	  src/Partition.cc,
+	  src/TreeView_Detail.cc,
+	  src/Win_GParted.cc: support partitions with multiple mountpoints
+	  (see also #330327)
+
+2006-02-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* wrap mount/umount/swapon/swapoff instead of implementing it
 	  ourselves (#330641)
 	* moved execute_command() to Utils and made the filesystems use it. All
